--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "expo-linking": "^6.3.1",
     "expo-router": "^3.5.18",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
-    "typescript": "~5.3.3",
-    "@types/react": "~18.2.79"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
