--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.22",
+    "expo": "^51.0.22",
     "expo-constants": "^16.0.2",
     "expo-linking": "^6.3.1",
     "expo-router": "^3.5.18",
@@ -17,13 +17,13 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.3",
+    "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
     "tailwindcss": "^3.3.2"
   },
